# HVCP

./: ReadMe.md
apps/: ReadMe.md
apps/PortRedirect/: CMakeLists.txt  ReadMe.md  main.cpp  modbusrtu.cpp  modbusrtu.h  serialport.cpp  serialport.h  service.cpp  service.h  window_resources.rc
apps/PortRedirect/fs/: banner
drv/: ReadMe.md
drv/HVCPDriver/: .gitignore  HVCPDriver.inx  HVCPDriver.rc  ReadMe.md  comsup.cpp  comsup.h  device.cpp  device.h  dllsup.cpp  driver.cpp  driver.h  exports.def  internal.h  queue.cpp  queue.h  ringbuffer.cpp  ringbuffer.h  serial.h  sources
drv/prebuilt/amd64/: HVCPDriver.inf  install.cmd  remove.cmd
drv/prebuilt/i386/: HVCPDriver.inf  install.cmd  remove.cmd
lib/: CMakeLists.txt  HVCP.cpp  HVCP.h  ReadMe.md  window_resources.rc
lib/test/: DriverAdd.cpp  DriverRemove.cpp  HVCPEnum.cpp  HVCPRead.cpp  HVCPWrite.cpp  main.cpp  test.cpp
